--- a/admin-api/infrastructure/src/main/resources/application.yml
+++ b/admin-api/infrastructure/src/main/resources/application.yml
@@ -11,7 +11,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${mysql.url}/${mysql.schema}?useSSL=true&serverTimezone=UTC&characterEncoding=utf8
+    url: jdbc:mysql://${mysql.url}/${mysql.schema}?useSSL=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: ${mysql.username}
     password: ${mysql.password}
     hikari:
