--- a/admin-api/infrastructure/src/main/resources/application-production.yml
+++ b/admin-api/infrastructure/src/main/resources/application-production.yml
@@ -2,7 +2,7 @@ mysql:
   username: ${DATABASE_MYSQL_USERNAME:root}
   password: ${DATABASE_MYSQL_PASSWORD:123456}
   schema: adm_videos
-  url: ${DABASE_MYSQL_URL:localhost:3306}
+  url: ${DATABASE_MYSQL_URL:localhost:3306}
 
   spring:
     jpa:
