--- a/admin-api/application/build.gradle
+++ b/admin-api/application/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
