--- a/admin-api/infrastructure/build.gradle
+++ b/admin-api/infrastructure/build.gradle
@@ -15,7 +15,7 @@ plugins {
     id 'org.flywaydb.flyway' version '8.5.10'
 }
 
-bootJar{
+bootJar {
     archiveName 'application.jar'
     destinationDirectory.set(file("${rootProject.buildDir}/libs"))
 }
@@ -32,13 +32,13 @@ dependencies {
     implementation(project(":application"))
 
     implementation 'io.vavr:vavr:0.10.4'
-    
+
     implementation('mysql:mysql-connector-java')
 
     implementation('org.springdoc:springdoc-openapi-webmvc-core:1.6.8')
     implementation('org.springdoc:springdoc-openapi-ui:1.6.8')
 
-    implementation('org.springframework.boot:spring-boot-starter-web'){
+    implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
     }
     implementation('org.springframework.boot:spring-boot-starter-undertow')
@@ -50,6 +50,7 @@ dependencies {
     testImplementation('org.testcontainers:testcontainers:1.17.2')
     testImplementation('org.testcontainers:mysql:1.17.2')
     testImplementation('org.testcontainers:junit-jupiter:1.17.2')
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
     testImplementation('org.flywaydb:flyway-core')
     testImplementation('org.springframework.boot:spring-boot-test')
@@ -57,7 +58,7 @@ dependencies {
     testImplementation('com.h2database:h2')
 }
 
-flyway{
+flyway {
     url = System.getenv('FLYWAY_DB') ?: 'jdbc:mysql://localhost:3306/adm_videos'
     user = System.getenv('FLYWAY_USER') ?: 'root'
     password = System.getenv('FLYWAY_PASS') ?: '123456'
