--- a/admin-api/application/build.gradle
+++ b/admin-api/application/build.gradle
@@ -12,10 +12,12 @@ repositories {
 dependencies {
     implementation(project(":domain"))
     implementation 'io.vavr:vavr:0.10.4'
+
+    testImplementation(project(path: ':domain', configuration: 'testClasses'))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
