--- a/admin-api/docker-compose.yml
+++ b/admin-api/docker-compose.yml
@@ -14,5 +14,18 @@ services:
     networks:
       - adm_videos_network
 
+  rabbitmq:
+    container_name: adm_videos_rabbitmq
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=UoNOcDhfxW9uoZ92wh6BjA
+      - RABBITMQ_DEFAULT_USER=adm_videos
+      - RABBITMQ_DEFAULT_PASS=123456
+      - RABBITMQ_DEFAULT_VHOST=/
+    ports:
+      - 15672:15672
+      - 5672:5672
+    networks:
+      - adm_videos_network
 networks:
   adm_videos_network:
