--- a/admin-api/infrastructure/build.gradle
+++ b/admin-api/infrastructure/build.gradle
@@ -46,10 +46,12 @@ dependencies {
     }
     implementation('org.springframework.boot:spring-boot-starter-undertow')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation('org.springframework.boot:spring-boot-starter-amqp')
 
     implementation('com.fasterxml.jackson.module:jackson-module-afterburner')
 
+    testImplementation('org.springframework.amqp:spring-rabbit-test:2.4.4')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.testcontainers:testcontainers:1.17.2')
     testImplementation('org.testcontainers:mysql:1.17.2')
     testImplementation('org.testcontainers:junit-jupiter:1.17.2')
