--- a/admin-api/infrastructure/src/main/resources/application-test-e2e.yml
+++ b/admin-api/infrastructure/src/main/resources/application-test-e2e.yml
@@ -1,4 +1,3 @@
-
 mysql:
   username: root
   password: 123456
@@ -7,3 +6,8 @@ mysql:
 logging:
   level:
     root: info
+
+spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
