--- a/admin-api/infrastructure/src/main/resources/application.yml
+++ b/admin-api/infrastructure/src/main/resources/application.yml
@@ -1,3 +1,17 @@
+amqp:
+  admin:
+    auto-create: false
+  queues:
+    video-created:
+      exchange: video.events
+      routing-key: video.created
+      queue: video.created.queue
+    video-encoded:
+      exchange: video.events
+      routing-key: video.encoded
+      queue: video.encoded.queue
+
+
 google:
   cloud:
     credentials: ${GOOGLE_CLOUD_CREDENTIALS}
@@ -51,6 +65,11 @@ spring:
       "[hibernate.dialect]": org.hibernate.dialect.MySQL5InnoDBDialect
       "[hibernate.generate_statistics]": true
       "[hibernate.connection.provider_disables_autocommit]": true
+  rabbitmq:
+    host: ${amqp.host}
+    port: ${amqp.port}
+    username: ${amqp.username}
+    password: ${amqp.password}
 storage:
   catalogo-videos:
     location-pattern: videoId-{videoId}
