feat: use java conventions in gradle

--- a/admin-api/infrastructure/build.gradle
+++ b/admin-api/infrastructure/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 plugins {
-    id 'java'
+    id 'java-conventions'
     id 'application'
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -21,11 +21,7 @@ bootJar {
 }
 
 group 'com.yansb.admin.api.infrastructure'
-version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
 
 dependencies {
     implementation(project(":domain"))
@@ -65,8 +61,4 @@ flyway {
     url = System.getenv('FLYWAY_DB') ?: 'jdbc:mysql://localhost:3306/adm_videos'
     user = System.getenv('FLYWAY_USER') ?: 'root'
     password = System.getenv('FLYWAY_PASS') ?: '123456'
-}
-
-test {
-    useJUnitPlatform()
 }
