--- a/admin-api/domain/build.gradle
+++ b/admin-api/domain/build.gradle
@@ -1,24 +1,12 @@
 plugins {
-    id 'java'
+    id 'java-conventions'
+    id 'java-library'
 }
 
 group 'com.yansb.admin.api.domain'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testImplementation 'io.vavr:vavr:0.10.4'
-
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
 }
 
 configurations {
@@ -35,6 +23,3 @@ task testJar(type: Jar) {
 artifacts {
     testClasses testJar
 }
-
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
