--- a/buildSrc/src/main/groovy/java-conventions.gradle
+++ b/buildSrc/src/main/groovy/java-conventions.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation 'io.vavr:vavr:0.10.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
@@ -26,18 +26,18 @@ tasks.named("test") {
     useJUnitPlatform()
 }
 
-task unitTests(type: Test, group: 'verification') {
+task unitTests(type: Test, group: "verification") {
     useJUnitPlatform {
         includeTags("unitTest")
     }
 }
-
-task integrationTests(type: Test, group: 'verification') {
+task integrationTests(type: Test, group: "verification") {
     useJUnitPlatform {
         includeTags("integrationTest")
     }
 }
-task e2eTests(type: Test, group: 'verification') {
+
+task e2eTests(type: Test, group: "verification") {
     useJUnitPlatform {
         includeTags("e2eTest")
     }
