--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,47 +1,30 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.flywaydb:flyway-mysql:8.5.10"
-    }
-}
-
 plugins {
     id 'java-conventions'
     id 'jacoco-report-aggregation'
     id 'application'
     id 'org.springframework.boot' version '2.7.7'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.flywaydb.flyway' version '8.5.10'
+    id 'org.flywaydb.flyway' version '9.11.0'
 }
+
+group 'com.yansb.admin.api.infrastructure'
 
 bootJar {
     archiveName 'application.jar'
     destinationDirectory.set(file("${rootProject.buildDir}/libs"))
 }
 
-group 'com.yansb.admin.api.infrastructure'
-
-
 dependencies {
     implementation(project(":domain"))
     implementation(project(":application"))
 
-    implementation('com.google.cloud:google-cloud-storage:2.20.2')
+    implementation('com.google.cloud:google-cloud-storage:2.17.1')
     implementation('com.google.guava:guava:31.1-jre')
 
     implementation('mysql:mysql-connector-java')
 
     implementation('org.springdoc:springdoc-openapi-webmvc-core:1.6.14')
     implementation('org.springdoc:springdoc-openapi-ui:1.6.14')
-
-    implementation('org.yaml:snakeyaml:1.33') {
-        version {
-            strictly('1.33')
-        }
-    }
-
 
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
@@ -52,19 +35,24 @@ dependencies {
 
     implementation('com.fasterxml.jackson.module:jackson-module-afterburner')
 
-    testImplementation('org.springframework.amqp:spring-rabbit-test:2.4.8')
+    implementation('org.yaml:snakeyaml:1.33') {
+        version { strictly("1.33") }
+    }
+
+    testImplementation(project(path: ':domain', configuration: 'testClasses'))
+
+    testImplementation('org.flywaydb:flyway-core')
+    testImplementation('org.flywaydb:flyway-mysql')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.amqp:spring-rabbit-test:2.4.8')
+    testImplementation('org.springframework.security:spring-security-test')
 
     testImplementation('org.testcontainers:testcontainers:1.17.6')
     testImplementation('org.testcontainers:mysql:1.17.6')
     testImplementation('org.testcontainers:junit-jupiter:1.17.6')
 
-    testImplementation(project(path: ':domain', configuration: 'testClasses'))
-
-    testImplementation('org.flywaydb:flyway-core')
-
-    testImplementation('org.springframework.boot:spring-boot-test')
-    testImplementation('com.h2database:h2')
+    testRuntimeOnly('com.h2database:h2')
 }
 
 flyway {
