--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI Pipeline
 
 on:
   push:
+    branches:
+      - 'feat/**'
+      - 'fix/**'
+      - 'main'
   workflow_dispatch:
 
 jobs:
