feat: add security config

--- a/infrastructure/src/main/resources/application-test-e2e.yml
+++ b/infrastructure/src/main/resources/application-test-e2e.yml
@@ -3,6 +3,11 @@ mysql:
   password: 123456
   schema: adm_videos
   url: localhost:${mysql.port}
+
+keycloak:
+  host: http://test:8443
+  realm: test
+
 logging:
   level:
     root: info
