--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ AMQP_RABBIT_PASSWORD=123456
 DATABASE_MYSQL_USERNAME=root
 DATABASE_MYSQL_PASSWORD=123456
 DATABASE_MYSQL_URL=localhost:3306
+
+KEYCLOAK_REALM=codeflix
+KEYCLOAK_HOST=http://keycloak:8443
