--- a/infrastructure/src/main/resources/application-development.yml
+++ b/infrastructure/src/main/resources/application-development.yml
@@ -1,24 +1,12 @@
-amqp:
-  admin:
-    auto-create: true
-  host: localhost
-  port: 5672
-  username: adm_videos
-  password: 123456
-
-keycloak:
-  host: http://localhost:8443
-  realm: codeflix
-
 mysql:
   username: root
   password: 123456
   schema: adm_videos
   url: localhost:3306
 
-server:
-  port: 8080
-  undertow:
-    threads:
-      worker: 64
-      io: 4
+spring:
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
