--- a/sandbox/services/docker-compose.yml
+++ b/sandbox/services/docker-compose.yml
@@ -1,32 +1,21 @@
 version: '3.7'
 
 services:
-  app:
-    container_name: adm_videos_app
-    image: yansb/codeflix:master-1
-    profiles: [ "app" ]
-    restart: unless-stopped
-    env_file:
-      - .env
-    ports:
-      - 8080:8080
-    depends_on:
-      - mysql
-      - rabbit
-    networks:
-      - adm_videos_network
   mysql:
     container_name: adm_videos_mysql
     image: mysql:latest
     environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=adm_videos
+      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: adm_videos
+      MYSQL_ROOT_HOST: '%'
     security_opt:
       - seccomp:unconfined
     ports:
       - 3306:3306
+    volumes:
+      - ../.docker/mysql:/var/lib/mysql:rw
     networks:
-      - adm_videos_network
+      - adm_videos_services
 
   rabbit:
     container_name: adm_videos_rabbitmq
@@ -40,7 +29,7 @@ services:
       - 15672:15672
       - 5672:5672
     networks:
-      - adm_videos_network
+      - adm_videos_services
 
   keycloak:
     container_name: adm_videos_keycloak
@@ -50,10 +39,14 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=admin
     ports:
       - 8443:8080
+    volumes:
+      - ../.docker/keycloak:/opt/keycloak/data/h2:rw
     command:
-      - start-dev
+      # - start-dev # Utilizar esse comando quando a applicaćão estiver rodando fora do docker
+      - start-dev --hostname-url=http://keycloak:8080 # Utilizar esse comando caso a applicaćão esteja rodando dentro do docker
     networks:
-      - adm_videos_network
+      - adm_videos_services
 
 networks:
-  adm_videos_network:
+  adm_videos_services:
+    external: true
